package com.example.house.model.enums;

public enum AccountType {
    ADMIN,
    NHAN_VIEN
}


