package com.example.house.model.enums;

public enum ContractStatus {
    HIEU_LUC,
    KET_THUC
}


