package com.example.house.model.enums;

public enum RoomStatus {
    TRONG,
    DA_THUE,
    BAO_TRI
}


