@startuml
skinparam style strictuml
hide methods
hide circle
left to right direction

legend right
  {PK} Primary key
  {FK} Foreign key
endlegend

' =========================
' Enums mapped from SQL ENUM
' =========================
enum AccountType {
  ADMIN
  NHAN_VIEN
}

enum RoomStatus {
  TRONG
  DA_THUE
  BAO_TRI
}

enum ContractStatus {
  HIEU_LUC
  KET_THUC
}

enum InvoiceType {
  DIN_KY
  BOI_THUONG
  QUYET_TOAN
}

enum FeedbackStatus {
  CHO_XU_LY
  DANG_SUA
  HOAN_THANH
}

' =========================
' Classes mapped from tables
' =========================
class TaiKhoan <<TAI_KHOAN>> {
  +id: int {PK}
  +tenDangNhap: String
  +matKhau: String
  +hoTen: String
  +loaiTaiKhoan: AccountType
}

class NhanVien <<NHAN_VIEN>> {
  +id: int {PK}
  +taiKhoanId: int {FK}
  +caLamViec: String
}

class Phong <<PHONG>> {
  +id: int {PK}
  +soPhong: String
  +tang: int
  +coMayLanh: Boolean
  +giaThueCoBan: BigDecimal
  +danhSachNoiThat: String
  +trangThai: RoomStatus
}

class KhachThue <<KHACH_THUE>> {
  +id: int {PK}
  +hoTen: String
  +soCccd: String
  +soDienThoai: String
}

class HopDong <<HOP_DONG>> {
  +id: int {PK}
  +khachThueId: int {FK}
  +phongId: int {FK}
  +ngayBatDau: LocalDate
  +ngayKetThuc: LocalDate
  +tienCoc: BigDecimal
  +anhHopDongUrl: String
  +soLuongNguoiO: int
  +trangThai: ContractStatus
}

class Xe <<XE>> {
  +id: int {PK}
  +hopDongId: int {FK}
  +loaiXe: String
  +bienSo: String
}

class ChiSoDienNuoc <<CHI_SO_DIEN_NUOC>> {
  +id: int {PK}
  +phongId: int {FK}
  +thang: int
  +nam: int
  +soDienCu: int
  +soDienMoi: int
  +soNuocCu: int
  +soNuocMoi: int
  +ngayGhi: LocalDateTime
}

class HoaDon <<HOA_DON>> {
  +id: int {PK}
  +hopDongId: int {FK}
  +nhanVienId: int {FK}
  +thang: int
  +nam: int
  +tienPhong: BigDecimal
  +tienDien: BigDecimal
  +tienNuoc: BigDecimal
  +tienXe: BigDecimal
  +tienRac: BigDecimal
  +tienBoiThuong: BigDecimal
  +tongTien: BigDecimal
  +daThanhToan: Boolean
  +ghiChu: String
  +loaiHoaDon: InvoiceType
  +ngayLap: LocalDateTime
}

class PhanHoi <<PHAN_HOI>> {
  +id: int {PK}
  +phongId: int {FK}
  +nhanVienId: int {FK}
  +noiDung: String
  +trangThai: FeedbackStatus
  +ngayGui: LocalDateTime
}

class CauHinhGia <<CAU_HINH_GIA>> {
  +id: int {PK}
  +tenLoai: String
  +donGia: BigDecimal
}

' =========================
' Associations from FK constraints
' =========================
TaiKhoan "1" -- "0..1" NhanVien : taiKhoanId
KhachThue "1" -- "0..*" HopDong : khachThueId
Phong "1" -- "0..*" HopDong : phongId
HopDong "1" -- "0..*" Xe : hopDongId
Phong "1" -- "0..*" ChiSoDienNuoc : phongId
HopDong "1" -- "0..*" HoaDon : hopDongId
NhanVien "1" -- "0..*" HoaDon : nhanVienId
Phong "1" -- "0..*" PhanHoi : phongId
NhanVien "1" -- "0..*" PhanHoi : nhanVienId

@enduml

